--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.application.name=wishlist
-spring.data.mongodb.uri=mongodb://localhost:27017/wishlistdb
+spring.data.mongodb.uri=${SPRING_DATA_MONGODB_URI}
+#spring.data.mongodb.uri=mongodb://root:example@127.0.0.1:27017/wishlist-db?authSource=admin
 
